# notes-extractor

./: .gitignore  README.md  prompt.yaml  pyproject.toml
docs/: PRD.md  SPEC.md
scripts/: pull_model.py
src/notes_extractor/: __init__.py  __main__.py  extract.py  model.py
